package org.ull.es.dap.brands.mercedezbenz;

public interface VehicleMercedesBenz {
    String description();
}
